<resources>
    <string name="app_name">청소년 복지 모아!</string>
    <string name="menu1">"복지 검색하기"</string>
    <string name="menu2">"분류 별 검색하기"</string>
    <string name="search">검색</string>
    <!--classify fragment menu-->
    <string name="charTarget">대상특성</string>
    <string name="houseHold">가구유형</string>
    <string name="field">분야</string>
    <string name="disability">장애유형</string>


    <!--home fragment button-->
    <string name ="customSearch">맞춤검색</string>
    <string name ="recommended">추천복지</string>
    <string name ="latestWelfare">최신복지</string>
    <string name ="linkedSite">연계사이트</string>

    <!--home fragment hompage imageview and textview-->
    <string name ="government24">정부24</string>
    <string name ="worknet">워크넷</string>
    <string name ="suwonsi">수원시</string>
    <string name ="yonginsi">용인시</string>

</resources>